# FGGB

./: .gitignore  .luarc.json  Cargo.toml  README.md  build.rs
src/: bind.rs  config.rs  define.rs  device.rs  device_manager.rs  error.rs  frida.rs  gg.rs  injector.rs  main.rs  process.rs  script.rs  server.rs  session.rs  variant.rs
