[package]
name = "GGBind"
version = "0.1.0"
edition = "2021"


[dependencies]
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.127"
bindgen = "0.69.4"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
bindgen = "0.69.4"

[dev-dependencies]
lazy_static = "1"

